# SolutioCpp

./: .gitignore  CMakeLists.txt  README.md
Data/ESTAR/Compounds/: 1,2-Dichlorobenzene.estar  1,2-Dichloroethane.estar  A-150 Tissue-Equivalent Plastic.estar  Acetone.estar  Acetylene.estar  Adenine.estar  Adipose Tissue (ICRP).estar  Air, Dry.estar  Alanine.estar  Aluminum Oxide.estar  Amber.estar  Ammonia.estar  Aniline.estar  Anthracene.estar  B-100 Bone-Equivalent Plastic.estar  Bakelite.estar  Barium Fluoride.estar  Barium Sulfate.estar  Benzene.estar  Beryllium Oxide.estar  Bismuth Germanium Oxide.estar  Blood (ICRP).estar  Bone, Compact (ICRU).estar  Bone, Cortical (ICRP).estar  Boron Carbide.estar  Boron Oxide.estar  Brain (ICRP).estar  Butane.estar  C-552 Air-Equivalent Plastic.estar  Cadmium Telluride.estar  Cadmium Tungstate.estar  Calcium Carbonate.estar  Calcium Fluoride.estar  Calcium Oxide.estar  Calcium Sulfate.estar  Calcium Tungstate.estar  Carbon Dioxide.estar  Carbon Tetrachloride.estar  Cellulose Acetate Butyrate.estar  Cellulose Acetate, Cellophane.estar  (+141 more)
Data/ESTAR/Elements/: 01-Hydrogen.estar  02-Helium.estar  03-Lithium.estar  04-Beryllium.estar  05-Boron.estar  06-CarbonAmorphous.estar  06-CarbonGraphite.estar  07-Nitrogen.estar  08-Oxygen.estar  09-Fluorine.estar  10-Neon.estar  11-Sodium.estar  12-Magnesium.estar  13-Aluminum.estar  14-Silicon.estar  15-Phosphorus.estar  16-Sulfur.estar  17-Chlorine.estar  18-Argon.estar  19-Potassium.estar  20-Calcium.estar  21-Scandium.estar  22-Titanium.estar  23-Vanadium.estar  24-Chromium.estar  25-Manganese.estar  26-Iron.estar  27-Cobalt.estar  28-Nickel.estar  29-Copper.estar  30-Zinc.estar  31-Gallium.estar  32-Germanium.estar  33-Arsenic.estar  34-Selenium.estar  35-Bromine.estar  36-Krypton.estar  37-Rubidium.estar  38-Strontium.estar  39-Yttrium.estar  (+60 more)
Data/NISTX/Compounds/: A150.nistx  Adipose.nistx  Air.nistx  Alanine.nistx  B100.nistx  Bakelite.nistx  Blood.nistx  Bone.nistx  Brain.nistx  Breast.nistx  C552.nistx  CadmiumTelluride.nistx  CalciumFluoride.nistx  CalciumSulfate.nistx  Ceric.nistx  CesiumIodide.nistx  CompoundList.txt  Concrete.nistx  ConcreteBA.nistx  EyeLens.nistx  Fricke.nistx  GadoliniumOxysulfide.nistx  Gafchromic.nistx  GalliumArsenide.nistx  Kodak.nistx  LeadGlass.nistx  LithiumFluoride.nistx  LithiumTetraborate.nistx  Lung.nistx  MagnesiumTetraborate.nistx  MercuricIodide.nistx  Muscle.nistx  Mylar.nistx  NylonRadiochromic.nistx  Ovary.nistx  PMMA.nistx  Polyethylene.nistx  Polystyrene.nistx  Polyvinyl.nistx  Pyrex.nistx  (+9 more)
Data/NISTX/Elements/: 01-Hydrogen.nistx  02-Helium.nistx  03-Lithium.nistx  05-Boron.nistx  (+46 more)
Data/SourceData/: CLRP_HDR_Ir-192_Amersham_Buchler_TG43.txt  CLRP_HDR_Ir-192_BEBIG GmbH_GI192M11_TG43.txt  CLRP_HDR_Ir-192_GammaMed_12i_TG43.txt  CLRP_HDR_Ir-192_GammaMed_Plus_TG43.txt  CLRP_HDR_Ir-192_Isodose Control_Flexisource_TG43.txt  CLRP_HDR_Ir-192_Nucletron_microSelectron-v1_TG43.txt  CLRP_HDR_Ir-192_Nucletron_microSelectron-v2_TG43.txt  CLRP_HDR_Ir-192_S.P.E.C. Inc._Co._TG43.txt  CLRP_HDR_Ir-192_Varian_VariSource VS2000_TG43.txt  CLRP_HDR_Ir-192_Varian_VariSource_TG43.txt  Nucletron_mHDR-v2_tg43.txt  Vijande_HDR_Co-60_Nucletron_Flexisource_TG43.txt
Examples/: CMakeLists.txt
Examples/AbsoluteDoseCalibrationDemo/: AbsoluteDoseCalibrationDemo.cpp  AbsoluteDoseCalibrationDemo.m  CMakeLists.txt
Examples/DoseCalcDemo/: CMakeLists.txt  DoseCalcDemo.cpp  DoseCalcDemo.m
Examples/PhotonDemo/: CMakeLists.txt  PhotonDemo.cpp  PhotonResults.m
Examples/PhysicsDemo/: CMakeLists.txt  PhysicsDemo.cpp  PhysicsDemo.m
Examples/RayCtDemo/: CMakeLists.txt  RayCtDemo.cpp
Imaging/: Tasmip.hpp
Physics/: NistPad.cpp  NistPad.hpp
Utilities/: DataInterpolation.hpp
(+36 files in other folders)
